--- a/software.html
+++ b/software.html
@@ -39,12 +39,72 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.jobvite.com/sugarcrm/job/oe6pbfwE'>SugarCRM Careers - Manager, Software Engineering</a></h5> 
+<h5><a href='https://referrals.ibm.com/ibmreppify/jobs/208825?bpin=1046&com=2&rin=1467367'>Job Profile - Senior Software Developer - IBM Security - MaaS360</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1935505'>Job Application for Senior Software Engineer (Work from Home) at Varsity Tutors</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/sugarcrm/job/ojfibfwL'>SugarCRM Careers - Software Engineer</a></h5> 
+<h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1935509'>Job Application for Senior Software Engineer (Work from Home) at Varsity Tutors</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1935512'>Job Application for Senior Software Engineer (Work from Home) at Varsity Tutors</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1938501'>Job Application for Senior Software Engineer (Work from Home) at Varsity Tutors</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1938502'>Job Application for Senior Software Engineer (Work from Home) at Varsity Tutors</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1938503'>Job Application for Senior Software Engineer (Work from Home) at Varsity Tutors</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1938504'>Job Application for Senior Software Engineer (Work from Home) at Varsity Tutors</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1938508'>Job Application for Senior Software Engineer (Work from Home) at Varsity Tutors</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1938509'>Job Application for Senior Software Engineer (Work from Home) at Varsity Tutors</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471851-software-engineer-java'>SmartRecruiters Inc Software Engineer, Java | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Krak?w</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471431-senior-software-engineer'>SmartRecruiters Inc Senior Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Krak?w</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471713-junior-software-engineer'>SmartRecruiters Inc Junior Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Krak?w</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698472121-software-engineer-android'>SmartRecruiters Inc Software Engineer, Android | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Krak?w</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471356-software-engineer-frontend'>SmartRecruiters Inc Software Engineer, Frontend | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Krak?w</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/sugarcrm/job/oe6pbfwE'>SugarCRM Careers - Manager, Software Engineering</a></h5> 
+<p><span class="badge badge-light">Atlanta, Georgia</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/sugarcrm/job/ojfibfwL'>SugarCRM Careers - Software Engineer</a></h5> 
+<p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hearst.referrals.selectminds.com/jobs/software-engineer-7382'>Software Engineer - Hearst Careers</a></h5> 
@@ -73,7 +133,7 @@
 <p><span class="badge badge-light">Buenos Aires, Argentina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/synack/jobs/1322740'>Job Application for Sr. Software Engineer at Synack</a></h5> 
+<h5><a href='https://boards.greenhouse.io/synack/jobs/1322740'>Job Application for Sr. Software Engineer at Synack</a></h5> 
 <p><span class="badge badge-light">Redwood City, CASan Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -119,7 +179,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5429'>Software Engineer I - SWD - University Recruiting - TriNet Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5429'>Software Engineer I - SWD - University Recruiting - TriNet Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -159,7 +219,7 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/gigamon/job/o1gkbfww'>Gigamon Careers - Senior Staff Software Engineer - GigaSmart</a></h5> 
+<h5><a href='http://jobs.jobvite.com/gigamon/job/o1gkbfww'>Gigamon Careers - Senior Staff Software Engineer - GigaSmart</a></h5> 
 <p><span class="badge badge-light">Chennai Chennai, India</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -179,7 +239,7 @@
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itron.referrals.selectminds.com/jobs/front-end-software-engineer-intern-3015'>Front-end Software Engineer Intern - Itron Careers</a></h5> 
+<h5><a href='https://itron.referrals.selectminds.com/jobs/front-end-software-engineer-intern-3015'>Front-end Software Engineer Intern - Itron Careers</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -231,7 +291,7 @@
 <p><span class="badge badge-light">Redmond, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/naborly/fd31df5a-9a96-4f57-958a-ee31b4491830'>Naborly - Senior Backend Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/naborly/fd31df5a-9a96-4f57-958a-ee31b4491830'>Naborly - Senior Backend Software Engineer</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -275,7 +335,7 @@
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kariusdx/831fede0-f883-4d6f-b548-e8412ec96fec'>Karius - Senior Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/kariusdx/831fede0-f883-4d6f-b548-e8412ec96fec'>Karius - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -303,7 +363,7 @@
 <p><span class="badge badge-light">Santa Clara, CASanta Clara, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.womenwhocode.com/jobs/5423?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Principal Software Engineer, Web Platform - H-E-B Digital | Women Who Code</a></h5> 
+<h5><a href='https://www.womenwhocode.com/jobs/5423?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Principal Software Engineer, Web Platform - H-E-B Digital | Women Who Code</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -365,7 +425,7 @@
 <p><span class="badge badge-light">Arlington, VA Arlington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/aeratechnology/cfcc4de9-c90a-42d7-8a8e-ac38de6dc00d'>Aera Technology - Software Engineer in Test (Automation)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aeratechnology/cfcc4de9-c90a-42d7-8a8e-ac38de6dc00d'>Aera Technology - Software Engineer in Test (Automation)</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -383,68 +443,6 @@
 <hr/>
 <h5><a href='https://jobs.lever.co/realtor/6c40b5b9-5371-43af-a35d-781928df09e9'>realtor.com - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/realtor/bfb6de14-1fbb-4a9f-b2ae-7bb21f8bb4d1'>realtor.com - Software Engineer - Back-end</a></h5> 
-<p><span class="badge badge-light">Vancouver, BC  Vancouver, BC</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/realtor/e70c94a9-05af-46ed-9ee9-59c7e44e4d06'>realtor.com - Senior Software Engineer ? Managed Service Markets</a></h5> 
-<p><span class="badge badge-light">Santa Clara, CA</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/wealthfront/a400e7dd-e662-497c-aaa0-68b1340301dd'>Wealthfront - Senior Software Engineer- Distributed Applications</a></h5> 
-<p><span class="badge badge-light">Palo Alto, CA</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://konradgroup.applytojob.com/apply/cKdBvY2eYz/Software-Developer-Entry-Level'>Software Developer (Entry Level) - Konrad Group - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://searchmetrics.recruitee.com/l/en/o/senior-software-engineer-mfx-focus-frontend'>
-      Senior Software Engineer (m/f/x) - Focus Frontend - Searchmetrics GmbH
-    </a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Nine/743999698437262-backend-software-engineer'>Nine Backend Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Australia</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://careers.jobscore.com/careers/dae/jobs/cyber-software-engineer-i-aYUGXOQm4r6AkyaKlHt0TF'>Cyber Software Engineer I #0500 job at Stratus Solutions in Fort Belvoir, VA, powered by JobScore</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://careers.jobscore.com/careers/dae/jobs/software-developer-ts-sci-with-polygraph-bHufAirbGr6zB-cR_n82lY'>Software Developer - TS/SCI with Polygraph #0424 job at Stratus Solutions in Columbia, MD, powered by JobScore</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://careers.jobscore.com/careers/dae/jobs/senior-software-engineer-ts-sci-with-polygraph-d_KrbwFySr6zkAaICoXfFy'>Senior Software Engineer - TS/SCI with Polygraph #0449 job at Stratus Solutions in McLean, VA, powered by JobScore</a></h5> 
-<p><span class="badge badge-light">Mc Lean, VAMc Lean, VA</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/invision/jobs/1880353'>Job Application for Staff Software Engineer - Data Services at InVision</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qAv9VfwT&k=Job&j=o1Wsbfwk&__jvst=Employee+Referral&__jvsd=sddHGhwz&__jvsc=Twitter&bid=nl44nMw7'>Hobsons Careers - Sr. Software Engineer (Naviance)</a></h5> 
-<p><span class="badge badge-light">Arlington, VA Arlington</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/senior-software-engineer-12306'>Senior Software Engineer - Akamai Careers</a></h5> 
-<p><span class="badge badge-light">Tel Aviv, Israel</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qAv9VfwT&k=Job&j=o1Wsbfwk&__jvst=Employee+Referral&__jvsd=sn5cpgwO&__jvsc=Twitter&bid=nDf3nMwz'>Hobsons Careers - Sr. Software Engineer (Naviance)</a></h5> 
-<p><span class="badge badge-light">Arlington, VA Arlington</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPDaVfwh&k=Job&j=oEIobfwF&__jvst=Employee+Referral&__jvsd=sXftHhw8&__jvsc=Twitter&bid=nD83nMws'> Silicon Labs Careers - Embedded Software Engineer</a></h5> 
-<p><span class="badge badge-light">Boston, Massachusetts  Austin, Texas</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/glidewelldental/job/orUpbfwF'>Glidewell Dental Careers - Software Engineer II</a></h5> 
-<p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
